[gd_scene load_steps=12 format=2]

[ext_resource path="res://theme/demo_theme.tres" type="Theme" id=1]
[ext_resource path="res://presentation/slide02/demo.gd" type="Script" id=2]
[ext_resource path="res://assets/coordinates.png" type="Texture" id=3]
[ext_resource path="res://presentation/VisualVector.gd" type="Script" id=4]
[ext_resource path="res://theme/font_label_medium.tres" type="DynamicFont" id=5]
[ext_resource path="res://presentation/slide02/DemoSubstraction.gd" type="Script" id=6]
[ext_resource path="res://assets/gray_square.png" type="Texture" id=7]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 0.218391, 0.218391, 0.218391, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.00246305 )
colors = PoolColorArray( 0, 0, 0, 1, 0.744141, 0.744141, 0.744141, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="IntroVectores" type="Node"]
__meta__ = {
"_edit_horizontal_guides_": [ 60.0 ]
}

[node name="Gui" type="Node" parent="."]

[node name="Bg" type="TextureRect" parent="Gui"]
anchor_right = 0.512
anchor_bottom = 1.0
margin_right = 0.399994
texture = SubResource( 4 )
expand = true

[node name="Bg2" type="TextureRect" parent="Gui"]
anchor_left = 0.512
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 0.16214
margin_top = -0.237823
margin_right = -0.237854
margin_bottom = 299.762
texture = SubResource( 2 )
expand = true

[node name="title1" type="Label" parent="Gui"]
margin_right = 410.0
margin_bottom = 73.0
theme = ExtResource( 1 )
text = "Coordenadas globales vs locales"
align = 1
autowrap = true
uppercase = true

[node name="title2" type="Label" parent="Gui"]
margin_left = 400.0
margin_right = 810.0
margin_bottom = 73.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Substracción de vectores posición"
align = 1
autowrap = true
uppercase = true

[node name="DemoCoordinates" type="Node2D" parent="."]
position = Vector2( 150.505, 245.742 )
script = ExtResource( 2 )

[node name="Coordinate" type="Label" parent="DemoCoordinates"]
margin_left = -110.0
margin_top = -40.0
margin_right = -70.0
margin_bottom = -26.0
theme = ExtResource( 1 )

[node name="CoordinateSystem" type="TextureRect" parent="DemoCoordinates"]
margin_left = -22.4299
margin_top = -22.6728
margin_right = 114.57
margin_bottom = 112.327
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="DemoCoordinates"]

[node name="VisualVector" type="Node2D" parent="DemoCoordinates"]
position = Vector2( 0.418152, 0 )
script = ExtResource( 4 )
tint = Color( 0.623529, 1, 0.517647, 1 )

[node name="Magnitude" type="Label" parent="DemoCoordinates"]
margin_left = -130.505
margin_top = 274.258
margin_right = 80.4948
margin_bottom = 309.258
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 5 )
text = "Magnitude: 100"

[node name="Direction" type="Label" parent="DemoCoordinates"]
margin_left = -130.505
margin_top = 307.899
margin_right = 68.4948
margin_bottom = 342.899
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 5 )
text = "Dirección: (1,1)"

[node name="DemoSubstraction" type="Node2D" parent="."]
position = Vector2( 450, 120 )
script = ExtResource( 6 )

[node name="CoordinateSystem" type="TextureRect" parent="DemoSubstraction"]
modulate = Color( 0.129412, 0.129412, 0.129412, 1 )
margin_left = -22.8539
margin_top = -22.8539
margin_right = 114.146
margin_bottom = 112.146
texture = ExtResource( 3 )

[node name="Red" type="Sprite" parent="DemoSubstraction"]
modulate = Color( 1, 0.219608, 0.219608, 1 )
position = Vector2( 60, 170 )
texture = ExtResource( 7 )

[node name="Green" type="Sprite" parent="DemoSubstraction"]
modulate = Color( 0.262745, 1, 0.247059, 1 )
position = Vector2( 240, 170 )
texture = ExtResource( 7 )

[node name="RedPosition" type="Node2D" parent="DemoSubstraction"]
script = ExtResource( 4 )
tint = Color( 0.517647, 0.164706, 0.164706, 1 )

[node name="GreenPosition" type="Node2D" parent="DemoSubstraction"]
script = ExtResource( 4 )
tint = Color( 0.121569, 0.494118, 0.160784, 1 )

[node name="DifferenceVector" type="Node2D" parent="DemoSubstraction"]
script = ExtResource( 4 )
tint = Color( 0.505882, 0.0980392, 0.541176, 1 )
